@@ -92,7 +92,8 @@ sub _table
         tableName          => 'RemoteExcludes',
         printableTableName => __('Includes and Excludes'),
         printableRowName   => __('exclude or include'),
-        defaultActions     => [ 'add', 'del', 'editField', 'changeView' ],
+        defaultActions     => [ 'add', 'del', 'editField', 'changeView', 'move' ],
+        order              => 1,
         tableDescription   => \@tableHeader,
         class              => 'dataTable',
         modelDomain        => 'EBackup',
